portuguese docs, cleaned up some unused test stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -347,7 +347,7 @@ services:
   monitoring:
     build:
       context: .
-      dockerfile: Dockerfile.monitoring
+      dockerfile: docker/Dockerfile.monitoring
     container_name: monitoring
     ports:
       - "5000:5000"
