health check on monitoring container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -360,6 +360,12 @@ services:
     networks:
       - factory_network
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:5000/api/system-status', timeout=5)"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
 
 volumes:
   kafka1_data:
